RESOLVED FIXED288265
[ Build-Failure ] Fix visionOS Build
https://bugs.webkit.org/show_bug.cgi?id=288265
Summary [ Build-Failure ] Fix visionOS Build
Robert Jenner
Reported 2025-02-21 17:35:23 PST
https://commits.webkit.org/290837@main Broke the visionOS build. We should fix it.
Attachments
Robert Jenner
Comment 1 2025-02-21 17:35:55 PST
EWS
Comment 2 2025-02-21 17:43:15 PST
Committed 290840@main (441eaa11a2c6): <https://commits.webkit.org/290840@main> Reviewed commits have been landed. Closing PR #41118 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.