[ Build-Failure ] Fix visionOS Build rdar://145334544 https://bugs.webkit.org/show_bug.cgi?id=288265

Unreviewed build fix.

Enum not available on all SDKs.

* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.mm:
(WebCore::VideoPresentationInterfaceIOS::cleanupFullscreen):

Canonical link: https://commits.webkit.org/290840@main